# bayes-filters-lib

./: .appveyor.yml  .gitignore  .travis.yml  BayesLib.mdj  BayesLib_No.mdj  CHANGELOG.md  CMakeLists.txt  LICENSE  LICENSE.md  README.md  index.html
doc/: CMakeLists.txt  Doxyfile  Doxyfile.in  ex_decorator.md  ex_dummy_filter.md  ex_kf.md  ex_sis.md  ex_sis_pf.md  ex_ukf.md  ex_upf.md  main.dox  mainpage.md
doc/html/: AdditiveMeasurementModel_8cpp.html  AdditiveMeasurementModel_8cpp__incl.map  AdditiveMeasurementModel_8cpp__incl.md5  AdditiveMeasurementModel_8cpp_source.html  AdditiveMeasurementModel_8h.html  AdditiveMeasurementModel_8h__dep__incl.map  AdditiveMeasurementModel_8h__dep__incl.md5  AdditiveMeasurementModel_8h__incl.map  AdditiveMeasurementModel_8h__incl.md5  AdditiveMeasurementModel_8h_source.html  AdditiveStateModel_8cpp.html  AdditiveStateModel_8cpp__incl.map  AdditiveStateModel_8cpp__incl.md5  AdditiveStateModel_8cpp_source.html  AdditiveStateModel_8h.html  AdditiveStateModel_8h__dep__incl.map  AdditiveStateModel_8h__dep__incl.md5  AdditiveStateModel_8h__incl.map  AdditiveStateModel_8h__incl.md5  AdditiveStateModel_8h_source.html  Agent_8cpp.html  Agent_8cpp__incl.map  Agent_8cpp__incl.md5  Agent_8cpp_source.html  Agent_8h.html  Agent_8h__dep__incl.map  Agent_8h__dep__incl.md5  Agent_8h__incl.map  Agent_8h__incl.md5  Agent_8h_source.html  BootstrapCorrection_8cpp.html  BootstrapCorrection_8cpp__incl.map  BootstrapCorrection_8cpp__incl.md5  BootstrapCorrection_8cpp_source.html  BootstrapCorrection_8h.html  BootstrapCorrection_8h__dep__incl.map  BootstrapCorrection_8h__dep__incl.md5  BootstrapCorrection_8h__incl.map  BootstrapCorrection_8h__incl.md5  BootstrapCorrection_8h_source.html  (+979 more)
doc/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_12.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  (+90 more)
doc/latex/: AdditiveMeasurementModel_8cpp.tex  AdditiveMeasurementModel_8cpp__incl.md5  AdditiveMeasurementModel_8h.tex  AdditiveMeasurementModel_8h__dep__incl.md5  AdditiveMeasurementModel_8h__incl.md5  AdditiveStateModel_8cpp.tex  AdditiveStateModel_8cpp__incl.md5  AdditiveStateModel_8h.tex  AdditiveStateModel_8h__dep__incl.md5  AdditiveStateModel_8h__incl.md5  Agent_8cpp.tex  Agent_8cpp__incl.md5  Agent_8h.tex  Agent_8h__dep__incl.md5  Agent_8h__incl.md5  BootstrapCorrection_8cpp.tex  BootstrapCorrection_8cpp__incl.md5  BootstrapCorrection_8h.tex  BootstrapCorrection_8h__dep__incl.md5  BootstrapCorrection_8h__incl.md5  Data_8h.tex  Data_8h__dep__incl.md5  Data_8h__incl.md5  DrawParticles_8cpp.tex  DrawParticles_8cpp__incl.md5  DrawParticles_8h.tex  DrawParticles_8h__dep__incl.md5  DrawParticles_8h__incl.md5  EstimatesExtraction_8cpp.tex  EstimatesExtraction_8cpp__incl.md5  EstimatesExtraction_8h.tex  EstimatesExtraction_8h__dep__incl.md5  EstimatesExtraction_8h__incl.md5  ExogenousModel_8cpp.tex  ExogenousModel_8cpp__incl.md5  ExogenousModel_8h.tex  ExogenousModel_8h__dep__incl.md5  ExogenousModel_8h__incl.md5  ExogenousProcess_8h.tex  ExogenousProcess_8h__dep__incl.md5  (+436 more)
src/BayesFilters/: CMakeLists.txt
src/BayesFilters/src/: AdditiveMeasurementModel.cpp  AdditiveStateModel.cpp  Agent.cpp  AuxiliaryFunction.cpp  BootstrapCorrection.cpp  CorrectionDecorator.cpp  DrawParticle.cpp  DrawParticles.cpp  EstimatesExtraction.cpp  ExogenousModel.cpp  ExponentialLikelihood.cpp  FilteringAlgorithm.cpp  FilteringContext.cpp  GPFCorrection.cpp  GPFPrediction.cpp  Gaussian.cpp  GaussianCorrection.cpp  GaussianFilter.cpp  GaussianLikelihood.cpp  GaussianMixture.cpp  GaussianPrediction.cpp  GaussianRef.cpp  GenericData.cpp  HistoryBuffer.cpp  InitSurveillanceAreaGrid.cpp  KFCorrection.cpp  KFPrediction.cpp  KalmanFilter.cpp  LTIMeasurementModel.cpp  LTIStateModel.cpp  LinearMeasurementModel.cpp  LinearModel.cpp  LinearSensor.cpp  LinearStateModel.cpp  Logger.cpp  MeasurementModel.cpp  MeasurementModelDecorator.cpp  ObservationModelDecorator.cpp  PFCorrection.cpp  PFCorrectionDecorator.cpp  (+38 more)
src/BayesFiltersLib/: CMakeLists.txt
src/BayesFiltersLib/include/: AuxiliaryFunction.h  Correction.h  FilteringAlgorithm.h  FilteringContext.h  FilteringFunction.h  KalmanFilter.h  LinearSensor.h  ParticleFilterCorrection.h  ParticleFilterPrediction.h  Prediction.h  PredictionDecorator.h  Resampling.h  SIRParticleFilter.h  StateModel.h  UnscentedKalmanFilter.h  WhiteNoiseAcceleration.h
src/BayesFiltersLib/src/: AuxiliaryFunction.cpp  CorrectionDecorator.cpp  DrawParticle.cpp  FilteringContext.cpp  KalmanFilter.cpp  LinearSensor.cpp  ParticleFilterCorrection.cpp  ParticleFilterPrediction.cpp  ParticleFilterPredictionDecorator.cpp  PredictionDecorator.cpp  Resampling.cpp  SIRParticleFilter.cpp  StateModelDecorator.cpp  UnscentedKalmanFilter.cpp  VisualCorrectionDecorator.cpp  (+1 more)
test/: CMakeLists.txt  testToDo.cpp
test/test_DirectionalStatisticsUtils/: CMakeLists.txt  main.cpp
test/test_FilteringAlgorithm/: CMakeLists.txt  main.cpp
test/test_Gaussian/: CMakeLists.txt  main.cpp
test/test_Gaussian_Density_UVR/: CMakeLists.txt  main.cpp
test/test_KF/: CMakeLists.txt  main.cpp
test/test_ParticleFilter/: CMakeLists.txt  main.cpp
test/test_QuaternionUtils/: CMakeLists.txt  main.cpp
test/test_SIR/: CMakeLists.txt  main.cpp
test/test_SIS/: CMakeLists.txt  main.cpp
test/test_SIS_Decorators/: CMakeLists.txt  main.cpp
test/test_SigmaPointUtils/: CMakeLists.txt  main.cpp
test/test_UKF/: CMakeLists.txt  main.cpp
test/test_UPF/: CMakeLists.txt  main.cpp
test/test_UPF_MAP/: CMakeLists.txt  main.cpp
test/test_UnscentedTransform/: CMakeLists.txt  main.cpp
test/test_mixed_KF_SUKF/: CMakeLists.txt  main.cpp
test/test_mixed_KF_UKF/: CMakeLists.txt  main.cpp
test/test_mixed_UKF_KF/: CMakeLists.txt  main.cpp
(+213 files in other folders)
